Archive2/6c/0896625fe6bd88/output
main.cpp: In function 'int main()':
main.cpp:19:5: error: expected ';' before 'return'
     return 0;
     ^
main.cpp:19:13: warning: statement has no effect [-Wunused-value]
     return 0;
             ^
